styles/main.css
/* // X-Small devices (portrait phones, less than 576px) */
@media (max-width: 575.98px) { 
    .customPadding {
        padding-left: 15px !important;
        padding-right: 15px !important;
    }

    .MobileView {
        display: inline !important;
    }

    .desktopView {
        display: none;
    }

    .mobileScreenLogo {
        width: 100px !important;
    }

    .font20 {
        font-size: 14px !important;
        line-height: 18px !important;
    }

    .navbarText .navbar-nav .nav-link {
        font-size: 16px !important;
        line-height: 26px !important;
        padding: 10px 10px;
    }

    .hrBorderColor {
        border-bottom: 1px solid #DCDCDC;
    }

    .customH1 h1 {
        font-size: 28px !important;
        line-height: 40px !important;
    }

    .centerTextResponsive {
        text-align: center !important;
    }

    .padding500 {
        padding-top: 385px !important;
    }

    .lineBg {
        background-image: none !important;
    }

    .removePaddingTop {
        padding-top: 0px !important;
    }

    .padding100 {
        padding-top: 70px !important;
    }

    .paddingRemove {
        padding-top: 0px !important;
    }

    .font28 {
        font-size: 20px !important;
        line-height: 34px !important;
    }

    .marginTopNegative {
        margin-top: -85px;
    }

    .padding150 {
        padding-top: 60px !important;
    }

    .wrapper {
        height: 218px !important;
    }

    .padding200 {
        padding-top: 90px !important;
    }

    .wh230 {
        width: 120px !important;
        height: 120px !important;
    }

    .paddingTop100 {
        padding-top: 100px;
    }

    .inputMarginTop {
        margin-top: 20px !important;
    }
    
    .paddingTop50 {
        padding-top: 50px !important;
    }

    .marginTopMobile {
        margin-top: 40px !important;
    }

    .h60 {
        height: 44px !important;
    }

    .margintopDownload {
        margin-top: 30px !important;
    }

    .font38 {
        font-size: 24px !important;
        line-height: 34px !important;
    }

    .customPadding5 {
        padding: 10px !important;
    }

    .footerFont {
        font-size: 16px !important;
        line-height: 30px !important;
    }

    .font50 {
        font-size: 30px !important;
        line-height: 40px !important;
    }

    .height90vh {
        height: auto !important;
    }
    
    table {
        display: block;
        overflow-x: auto;
        white-space: nowrap;
    }

    .wh100 {
        width: 100px;
        height: 100px;
    }

    .custompaddingTop100 {
        padding-top: 60px !important;
    }

    .paddingBottom100 {
        padding-bottom: 60px !important;
    }

    .removePaddingBottom {
        padding-bottom: 60px !important;
    }

    .responsiveContent {
        justify-content: center !important;
    }

    .borderRight {
        border-right: none!important;
        border-bottom: 1px solid #3E4246;
    }

    .contentcenterresponsive {
        justify-content: center;
    }

    .paddingtopres100 {
        padding-top: 10px !important;
    }
}


/* // Small devices (landscape phones, less than 768px) */
@media (max-width: 767.98px) { 
    table {
        display: block;
        overflow-x: auto;
        white-space: nowrap;
    }
}

/* // Medium devices (tablets, less than 992px) */
@media (min-width: 768px) and (max-width: 991.98px) { 
    .height100vh {
        height: auto !important;
    }

    body {
        overflow-x: hidden;
    }

    .centerTextResponsiveTab {
        text-align: center;
    }

    .wrapper {
        height: 300px !important;
    }

    .wh230 {
        width: 170px !important;
        height: 170px !important;
    }

    .marginToptab {
        margin-top: 40px ;
    }

    .tabViewHide {
        display: none;
    }

    .tabViewShow {
        display: inline !important;
    }

    .font38 {
        font-size: 25px !important;
        line-height: 30px !important;
    }

    .font50 {
        font-size: 30px !important;
        line-height: 40px !important;
    }
    
    table {
        display: block;
        overflow-x: auto;
        white-space: nowrap;
    }

    .mr130 {
        margin-right: -70px !important;
    } 

    .paddingRemove {
        padding-top: 0px !important;
    }

    .paddingtopres100 {
        padding-top: 10px !important;
    }

    .font20 {
        font-size: 16px !important;
        line-height: 24px !important;
    }

    .wh380 {
        width: 380px;
        height: 380px;
    }

    .lineBg {
        background-image: url('../assets/home/Group\ 392.svg') !important;
        
    }

    .padding200 {
        padding-top: 150px !important;
    }
    
}
/* ... */

